--- a/core/templates/core/dashboard_employee.html
+++ b/core/templates/core/dashboard_employee.html
@@ -1025,6 +1025,11 @@
             </div>
             
             <div class="form-group">
+                <label>{% trans "Budget Line" %} ({% trans "Optional" %})</label>
+                {{ form.budget_line }}
+            </div>
+            
+            <div class="form-group">
                 <label>{% trans "Cost Code" %} ({% trans "Optional" %})</label>
                 {{ form.cost_code }}
             </div>
