Cleanup: Remove console.log debug statement from employee dashboard

--- a/core/templates/core/dashboard_employee.html
+++ b/core/templates/core/dashboard_employee.html
@@ -1083,7 +1083,7 @@
                         }
                     })
                     .catch(err => {
-                        console.log('Could not fetch COs:', err);
+                        // Error silently handled - COs are optional
                     });
             }
             
